java-common (0.17) unstable; urgency=low

  * Fixed some xml errors and reference error to debian policy, using
    patch from Ahmed <ahmed@baizid.org>, closes: #173033.

 -- Ola Lundqvist <opal@debian.org>  Mon, 16 Dec 2002 08:07:39 +0100

java-common (0.16) unstable; urgency=low

  * Updated java policy with more about JNI, closes: #162282.

 -- Ola Lundqvist <opal@debian.org>  Wed, 25 Sep 2002 16:50:48 +0200

java-common (0.15) unstable; urgency=low

  * Removed policy.sgml from source.
  * Changed so that the policy is no longer PROPOSED.
  * Some editorial changes.
  * Java libraries should now only suggest java-virtual-machine,
    closes: #159448.
  * Documentation about -gcj and -jni, closes: #146771.
  * Java-common now suggests equivs and contain instructions on how to create
    a dummy package, closes: #159483. Thanks to
    "Grzegorz Prokopski (Debian Developer)" <gadek@debian.org>.
  * Fixed typo, closes: #160735.
  * Updated debian-java-faq.
  * Fixed build problem.
  * Updated standards version.

 -- Ola Lundqvist <opal@debian.org>  Wed, 25 Sep 2002 07:41:45 +0200

java-common (0.14) unstable; urgency=low

  * Fixed description again.

 -- Ola Lundqvist <opal@debian.org>  Sun,  7 Apr 2002 12:03:11 +0200

java-common (0.13) unstable; urgency=low

  * Fixed description, closes: #141463.

 -- Ola Lundqvist <opal@debian.org>  Sat,  6 Apr 2002 17:31:32 +0200

java-common (0.12) unstable; urgency=low

  * Fixed spaces in description, closes: #137179.
  * Fixed doc-base bug, closes: #137516.

 -- Ola Lundqvist <opal@lysator.liu.se>  Fri,  5 Apr 2002 21:25:34 +0200

java-common (0.11) unstable; urgency=low

  * Fixed doc-base problem, closes: #136994, #137022, #137031, #137063.

 -- Ola Lundqvist <opal@debian.org>  Wed,  6 Mar 2002 16:10:04 +0100

java-common (0.10) unstable; urgency=low

  * Changed descriotion, closes: #118458.
  * Added doc-base file, thanks to Javier Fernandez-Sanguino Pena
    <jfs@dat.etsit.upm.es>, closes: #118459.